wip: translations working, generic queries, yay
