# src/main/resources/api/api-spec.yaml
@@ -174,6 +174,23 @@ paths:
       operationId: getFormData
       tags:
         - Form Data
+  /translations/{language}:
+    get:
+      description: Retrieves the translations available at the instance
+      parameters:
+        - name: language
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          description: The list of translations available at the instance
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Translations'
+      operationId: getTranslations
 components:
   parameters:
     ReportTemplateId:
@@ -358,6 +375,10 @@ components:
         - holding
         - authorities
         - vocabulary
+    Translations:
+      type: object
+      additionalProperties:
+        type: string
   responses:
     500ApiError:
       description: Unexpected errors on the server side
